--- a/example/k8s-example/Makefile
+++ b/example/k8s-example/Makefile
@@ -4,4 +4,7 @@ build:
 	docker build -t in-cluster .
 
 run:
-	kubectl run --rm -i demo --image=in-cluster
+	kubectl run --rm -i demo --image=in-cluster --image-pull-policy=IfNotPresent
+
+rbac:
+	kubectl create clusterrolebinding default-view --clusterrole=view --serviceaccount=default:default
