--- a/example/deployment/app.yaml
+++ b/example/deployment/app.yaml
@@ -1,7 +1,6 @@
 name: "helloworld"
-dsn: "root:root@tcp(127.0.0.1:3306)/gof?charset=utf8&parseTime=True&loc=Local"
+dsn: "root:root@tcp(127.0.0.1:3306)/deploy?charset=utf8&parseTime=True&loc=Local"
 pprof-host: ":9909"
 jaeger-host: "127.0.0.1:9502"
 server-port: ":5903"
-http-port: ":5906"
 prometheus-host: ":5904"
