--- a/example/deployment/Dockerfile
+++ b/example/deployment/Dockerfile
@@ -1,16 +1,17 @@
-FROM golang:1.16 as build
+# Copyright 2017 The Kubernetes Authors.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 
-WORKDIR /zcx
-
-ADD . /zcx
-
-RUN go env -w GO111MODULE=on && \
-    go env -w GOPROXY=https://goproxy.cn,direct && \
-    GOOS=linux go build -o ./app ./cmd
-
-FROM scratch as final
-
-COPY --from=build /zcx/app /zcx/app.yaml /
-ENV TZ=Asia/Shanghai
-
-ENTRYPOINT [ "/app"]
+FROM debian
+COPY ./app ./app.yaml /
+ENTRYPOINT /app
